--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   smooth_page_indicator: ^1.2.1
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,8 @@ flutter:
     - assets/images/Finances.png
     - assets/images/Finances2.png
     - assets/images/Finances3.png
+    - assets/images/facebook.png
+    - assets/images/twitter.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
