--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   smooth_page_indicator: ^1.2.1
   shared_preferences: ^2.5.2
+  firebase_core: ^3.12.1
+  firebase_auth: ^5.5.1
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +70,10 @@ flutter:
     - assets/images/Finances3.png
     - assets/images/facebook.png
     - assets/images/twitter.png
+    - assets/images/googleIcon.png
+    - assets/images/4BUDGETTING.png
+    - assets/images/9ECONOMY ANALYSIS.png
+    - assets/images/2INCOME INEQUALITY.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
